--- a/src/app/admin/components/admin-price-list/admin-price-list.component.html
+++ b/src/app/admin/components/admin-price-list/admin-price-list.component.html
@@ -6,44 +6,146 @@
           <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px">
             {{'ADMIN.PRICE_LIST.HEADER.TITLE' | translate:locale.language}}
           </div>
+          <span class="spacer"></span>
+          <button matTooltip="Add new config" matTooltipPosition="left" mat-mini-fab class="fab-toggler">
+            <em class="material-icons">add</em>
+          </button>
         </mat-toolbar>
         <mat-card-content>
-          <ng-container *ngIf="!isLoading; then thenTemplate; else elseTemplate"></ng-container>
-          <ng-template #thenTemplate>
-            <ng-container *ngIf="configModelList.length > 0 then thenTemplate; else elseTemplate"></ng-container>
+          <ng-template #serviceData>
+            <ng-container *ngIf="productList.length > 0 then thenTemplate; else elseTemplate"></ng-container>
             <ng-template #thenTemplate>
-              <mat-nav-list>
-                <mat-list-item *ngFor="let config of configModelList">
-                  <div mat-line>{{config.key}}</div>
-                  <p mat-line>{{config.value}} </p>
-                  <button mat-icon-button color="accent"
-                    matTooltip="{{'ADMIN.CONFIG.BUTTON.EDIT' | translate:locale.language:{name: config.key} }}"
-                    matTooltipPosition="above">
-                    <mat-icon>edit</mat-icon>
+              <div style="padding: 32px">
+                <table mat-table [dataSource]="dataSource" multiTemplateDataRows class="mat-elevation-z8 flex-full"
+                  matSort matSortDisableClear>
+                  <ng-container [matColumnDef]="column.columnDef" *ngFor="let column of columns; let cIndex = index">
+                    <ng-container *ngIf="cIndex === 0; else headerElseTemplate">
+                      <th mat-header-cell *matHeaderCellDef>
+                        <mat-checkbox (change)="$event ? masterToggle() : null"
+                          [checked]="selection.hasValue() && isAllSelected()"
+                          [indeterminate]="selection.hasValue() && !isAllSelected()">
+                        </mat-checkbox>
+                      </th>
+                    </ng-container>
+                    <ng-template #headerElseTemplate>
+                      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                        {{column.header}}
+                      </th>
+                    </ng-template>
+
+                    <td mat-cell *matCellDef="let row;">
+                      <ng-container *ngIf="cIndex === 0; then thenTemplate; else elseTemplate"></ng-container>
+                      <ng-template #thenTemplate>
+                        <mat-checkbox (click)="$event.stopPropagation()"
+                          (change)="$event ? selection.toggle(row) : null" [checked]="selection.isSelected(row)"
+                          [aria-label]="checkboxLabel(row)">
+                        </mat-checkbox>
+                      </ng-template>
+                      <ng-template #elseTemplate>
+                        {{ column.cell(row) == 'null' ? 'NA' : column.cell(row) == 'undefined' ? 'NA' :
+                        column.cell(row) }}
+                      </ng-template>
+                    </td>
+                  </ng-container>
+
+                  <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
+                  <ng-container matColumnDef="expandedDetail" class="flex-full">
+                    <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
+                      <div class="element-detail"
+                        [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+                        <div fxLayout="column" fxLayoutAlign="center start" class="m-t-10 m-b-10 flex-full">
+                          <div fxLayout="row" fxLayoutAlign="start center" class="flex-full m-b-20">
+                            <span fxLayout="column" fxLayoutAlign="center start" class="m-l-40">
+                              <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px">
+                                <span class="school-font size-14 weight-400">{{'ADMIN.PRODUCT.NAME' |
+                                  translate:lang}}: </span>
+                                <span class="school-font size-18 weight-700">{{element?.productName}}</span>
+                              </div>
+                              <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px">
+                                <span class="school-font size-14 weight-400">{{'ADMIN.PRODUCT.ID' |
+                                  translate:lang}}:
+                                </span>
+                                <span class="school-font size-18 weight-700">{{element?.id}}</span>
+                              </div>
+                              <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px">
+                                <span class="school-font size-14 weight-400">{{'ADMIN.PRODUCT.BUY_PRICE'
+                                  |
+                                  translate:lang}}: </span>
+                                <span class="school-font size-18 weight-700">{{element?.buyPrice}}</span>
+                              </div>
+                              <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px">
+                                <span class="school-font size-14 weight-400">{{'ADMIN.PRODUCT.WHOLE_SALE_PRICE' |
+                                  translate:lang}}: </span>
+                                <span class="school-font size-18 weight-700">{{element?.wholeSalePrice}}</span>
+                              </div>
+                              <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px">
+                                <span class="school-font size-14 weight-400">{{'ADMIN.PRODUCT.STOCK' |
+                                  translate:lang}}: </span>
+                                <span class="school-font size-18 weight-700">{{element?.stockTotal}}</span>
+                              </div>
+                              <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px">
+                                <span class="school-font size-14 weight-400">{{'ADMIN.PRODUCT.SELLING_PRICE' |
+                                  translate:lang}}:
+                                </span>
+                                <span class="school-font size-18 weight-700">{{element?.sellingPrice}}</span>
+                              </div>
+                              <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px">
+                                <span class="school-font size-14 weight-400">{{'ADMIN.PRODUCT.ON_SALE_PRICE'
+                                  |
+                                  translate:lang}}: </span>
+                                <span class="school-font size-18 weight-700">{{element?.onSalePrice}}</span>
+                              </div>
+                            </span>
+                          </div>
+                          <div fxLayout="row" fxLayoutAlign="end center" fxLayoutGap="10px" class="flex-full">
+                            <!-- <button mat-raised-button (click)="gotoIndividualStudentDetails(element)"
+                              color="primary">
+                              <mat-icon svgIcon="eye"></mat-icon>
+                              <span>{{'USER_INFO.STUDENT_INFO.FIRST_SELECTION_MENU' | translate:lang}}</span>
+                            </button> -->
+                            <button mat-raised-button color="warn" (click)="deleteProduct(element)">
+                              <mat-icon svgIcon="delete"></mat-icon>
+                              <span>{{'ADMIN.PRODUCT.SECOND_SELECTION_MENU' | translate:lang}}</span>
+                            </button>
+                          </div>
+                        </div>
+                      </div>
+                    </td>
+                  </ng-container>
+                  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                  <tr mat-row *matRowDef="let element; columns: displayedColumns;" class="element-row"
+                    [class.expanded-row]="expandedElement === element"
+                    (click)="expandedElement === element ? expandedElement = '' : expandedElement = element"
+                    [class.bg-accent-light]="expandedElement === element">
+                  </tr>
+                  <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="detail-row"></tr>
+                </table>
+                <mat-paginator #paginator [pageSizeOptions]="dataHandler.tablePageSize" showFirstLastButtons>
+                </mat-paginator>
+              </div>
+              <div *ngIf="selection.hasValue()" fxLayout="column" fxLayoutAlign.gt-sm="end center" fxLayout.gt-sm="row"
+                fxLayoutAlign="center end" class="flex-full">
+                <div fxLayout="row" fxLayoutAlign="end center" class="spaceIn flex-full m-r-10">
+                  <button mat-raised-button color="primary" (click)="gotoMultipleNonRegEditStudentDetails()">
+                    {{'USER_INFO.STUDENT_INFO.UPDATE_MULTIPLE_DATA' | translate:lang:{selectedLength:
+                    selection.selected.length } }}
                   </button>
-                  <button mat-icon-button color="warn"
-                    matTooltip="{{'ADMIN.CONFIG.BUTTON.DELETE' | translate:locale.language:{name: config.key} }}"
-                    matTooltipPosition="above">
-                    <mat-icon>delete</mat-icon>
-                  </button>
-                </mat-list-item>
-              </mat-nav-list>
+                </div>
+              </div>
             </ng-template>
             <ng-template #elseTemplate>
               <app-no-data></app-no-data>
             </ng-template>
           </ng-template>
-          <ng-template #elseTemplate>
-            <app-component-loading></app-component-loading>
-          </ng-template>
+          <app-component-loading [type]="'circular'" [isLoading]="isLoading" [bodyTemplate]="serviceData">
+          </app-component-loading>
         </mat-card-content>
       </mat-card>
-      <div class="fab-container">
-        <button matTooltip="Add new config" matTooltipPosition="left" mat-fab class="fab-toggler"
-          >
+      <!-- <div class="fab-container">
+        <button matTooltip="Add new config" matTooltipPosition="left" mat-fab class="fab-toggler">
           <em class="material-icons">add</em>
         </button>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
