--- a/src/app/admin/components/admin-price-list/admin-price-list.component.scss
+++ b/src/app/admin/components/admin-price-list/admin-price-list.component.scss
@@ -1,3 +1,4 @@
+@import "src/themes/variables/helper.scss";
 .primary-info {
   &-div {
     display: inline-flex;
@@ -15,5 +16,312 @@
       margin: 10px;
       cursor: pointer; // height: 30vh;
     }
+  }
+}
+
+.teacher-info {
+  &-div {
+    display: inline-flex;
+    flex-flow: row wrap;
+    overflow-x: hidden;
+  }
+
+  &-card {
+    padding: 0 0 20px 0 !important;
+    margin: 10px;
+    cursor: pointer;
+
+    &-gt-xs {
+      padding: 0 0 20px 0 !important;
+      margin: 10px;
+      cursor: pointer; // height: 30vh;
+    }
+  }
+}
+
+// Mat Table customization
+tr.detail-row {
+  height: 0;
+}
+
+tr.element-row:not(.expanded-row):hover {
+  background: #f5f5f5;
+}
+
+tr.element-row:not(.expanded-row):active {
+  background: #efefef;
+}
+
+.element-row td {
+  border-bottom-width: 0;
+}
+
+.element-detail {
+  overflow: hidden;
+  display: flex;
+}
+
+.element-diagram {
+  min-width: 80px;
+  border: 2px solid black;
+  padding: 8px;
+  font-weight: lighter;
+  margin: 8px 0;
+  height: 104px;
+}
+
+.element-symbol {
+  font-weight: bold;
+  font-size: 40px;
+  line-height: normal;
+}
+
+.element-description {
+  padding: 16px;
+}
+
+.element-description-attribution {
+  opacity: 0.5;
+}
+
+.card-view {
+  &-div {
+    display: inline-flex;
+    flex-flow: row wrap;
+    overflow-x: hidden;
+    padding: 1em;
+    margin: 0.5em auto;
+    // &:after {
+    //     content: "";
+    //     flex: auto;
+    // }
+  }
+
+  &-card {
+    padding: 0 0 0 0 !important;
+    margin: 10px;
+    cursor: pointer;
+  }
+
+  &-header-image {
+    background-size: cover;
+    height: 60px;
+    width: 60px;
+  }
+}
+
+.card {
+  float: left;
+  margin: 5px;
+}
+
+.card-two {
+  position: relative;
+  width: 200px;
+  background: #fff; // box-shadow: 0 10px 7px -5px rgba(#000,.4);
+
+  header {
+    position: relative;
+    width: 100%;
+    height: 30px;
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      background: inherit;
+      -webkit-transform: skewY(8deg);
+      -moz-transform: skewY(8deg);
+      -ms-transform: skewY(8deg);
+      -o-transform: skewY(8deg);
+      transform: skewY(8deg);
+      -webkit-transform-origin: 0 100%;
+      -moz-transform-origin: 0 100%;
+      -ms-transform-origin: 0 100%;
+      -o-transform-origin: 0 100%;
+      transform-origin: 0 100%;
+    }
+
+    .avatar {
+      position: absolute;
+      left: 50%;
+      top: 10px;
+      margin-left: -40px;
+      z-index: 5;
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
+      overflow: hidden;
+      background: #ccc;
+      background-size: cover;
+      border: 3px solid #fff;
+
+      img {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        -webkit-transform: translate(-50%, -50%);
+        -moz-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        -o-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+        width: 100px;
+        height: auto;
+        background-size: cover;
+      }
+    }
+
+    .menu {
+      position: absolute;
+      right: -5px;
+      top: -5px;
+    }
+  }
+
+  h3 {
+    position: relative;
+    margin: 65px 0 15px;
+    text-align: center;
+
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: -10px;
+      left: 50%;
+      margin-left: -15px;
+      width: 30px;
+      height: 1px;
+      background: #000;
+    }
+  }
+
+  .desc {
+    padding: 0 1rem 2rem;
+    text-align: center;
+    line-height: 1.5;
+    color: #777;
+  }
+
+  .contacts {
+    width: 200px;
+    max-width: 100%;
+    margin: 0 auto 3.5rem;
+
+    a {
+      display: block;
+      width: 33.333333%;
+      float: left;
+      text-align: center;
+
+      &:hover {
+        color: #333;
+
+        .fa {
+          &::before {
+            color: #fff;
+          }
+
+          &::after {
+            top: 0;
+          }
+        }
+      }
+
+      .fa {
+        position: relative;
+        width: 40px;
+        height: 40px;
+        line-height: 39px;
+        overflow: hidden;
+        text-align: center;
+        border-radius: 50%;
+
+        &:before {
+          position: relative;
+          z-index: 1;
+        }
+
+        &::after {
+          content: "";
+          position: absolute;
+          top: -50px;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          -webkit-transition: top 0.3s;
+          -moz-transition: top 0.3s;
+          -ms-transition: top 0.3s;
+          -o-transition: top 0.3s;
+          transition: top 0.3s;
+        }
+      }
+
+      &:last-of-type .fa {
+        line-height: 36px;
+      }
+    }
+  }
+
+  footer {
+    position: relative;
+    height: 45px;
+    background-color: $sec-col;
+    text-align: center;
+
+    p {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      z-index: 1;
+
+      a {
+        padding: 0 1rem;
+        color: #e2e2e2;
+        -webkit-transition: color 0.4s;
+        -moz-transition: color 0.4s;
+        -ms-transition: color 0.4s;
+        -o-transition: color 0.4s;
+        transition: color 0.4s;
+
+        &:hover {
+          color: $main-col;
+        }
+      }
+    }
+
+    &::before {
+      z-index: 0;
+      content: "";
+      position: absolute;
+      top: 0px;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      background: inherit;
+      -webkit-transform: skewY(8deg);
+      -moz-transform: skewY(8deg);
+      -ms-transform: skewY(8deg);
+      -o-transform: skewY(8deg);
+      transform: skewY(8deg);
+      -webkit-transform-origin: 100%;
+      -moz-transform-origin: 100%;
+      -ms-transform-origin: 100%;
+      -o-transform-origin: 100%;
+      transform-origin: 100%;
+    }
+  }
+}
+
+/*** RESPONSIVE ***/
+
+@media only screen and (max-width: 810px) {
+  .card {
+    float: none;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
